//*****************************************************************************
// Copyright 2025 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//*****************************************************************************

syntax = "proto2";
package mediapipe;

import "mediapipe/framework/calculator.proto";


message SpeechCalculatorOptions {
  extend mediapipe.CalculatorOptions {
    // https://github.com/google/mediapipe/issues/634 have to be unique in app
    // no rule to obtain this
    optional SpeechCalculatorOptions ext = 116423755;
    }

    // fields required for GenAI pipeline initialization
    required string models_path = 1;
    optional string device = 2;
    optional string plugin_config = 3;
    enum Mode {
      TEXT_TO_SPEECH = 0;
      SPEECH_TO_TEXT = 1;
    }

    required Mode mode = 4 [default = TEXT_TO_SPEECH];
}
